fix-z-index

--- a/components/DocSearch/style.module.css
+++ b/components/DocSearch/style.module.css
@@ -5,7 +5,7 @@
   right: 0;
   bottom: 0;
   background: hsla(0, 0%, 100%, 0.8);
-  z-index: 10000;
+  z-index: 1;
   visibility: hidden;
   opacity: 0;
   transition: opacity 0.25s ease-in-out;
@@ -23,7 +23,7 @@
   background: #fff;
   box-shadow: 0 15px 35px 0 rgba(50, 50, 93, 0.1),
     0 5px 15px 0 rgba(0, 0, 0, 0.07);
-  z-index: 10010;
+  z-index: 1;
   border-radius: 0 0 4px 4px;
 }
 
@@ -35,7 +35,7 @@
 .results {
   margin-top: 55px;
   list-style-type: none;
-  padding: 0;
+  padding: 0 0 20px 0;
 }
 
 .result {
@@ -71,19 +71,6 @@
   }
 }
 
-.community {
-  font-size: 9px;
-  text-transform: uppercase;
-  font-weight: bold;
-  padding: 2px 4px 1px;
-  border-radius: 2px;
-  background: var(--base-body-color);
-  color: #fff;
-  display: inline-block;
-  vertical-align: super;
-  margin-left: 6px;
-}
-
 .resultBody,
 .resultUrl {
   font-size: 13px;
@@ -110,7 +97,7 @@
   position: absolute;
   top: 0;
   width: 500px;
-  z-index: 10020;
+  z-index: 2;
 
   input {
     color: var(--light-body-color);
@@ -173,10 +160,10 @@
 @media (width < 1000px) {
   .searchResults {
     display: block;
-    position: relative;
     width: 100%;
   }
   .formSearch {
+    position: relative;
     width: 100%;
   }
 }
