--- a/components/DocsLayout/style.module.css
+++ b/components/DocsLayout/style.module.css
@@ -6,6 +6,10 @@
   .mainHeader {
     display: none;
   }
+
+  .contentWrapper {
+    position: relative;
+  }
 }
 
 @media (width >= 1000px) {
